@startuml scrabble

class Game{
    players = list
    board = class Board
    tile_bag = class TileBag
    first = int
    skipped_turns = int

    create_player(name_players)
    print_board()
}

class Player {
    id = int
    name = string
    tiles_in_hand = list

    one_draw(tiles_sack)
    full_draw(tiles_sack)
    put_t_draw(tiles_sack, indexs)
}

class Board {
    spots = list

    set_spots()
    multiplier(x, y)
    get_board()
    place_word(word, row, col, direction)
    can_place_first_word(word, row, col, direction)
    can_place_word(word, row, col, direction)
    place_letters(word, row, col, direction, indexes)
}

class TileBag{
    tiles = list

    create_tile()
    add_tile(tile)
    draw_tile(index)
}

class Spot {
    tile = Boolean
    mult_value = int
    mult_type = string

    set_tile(tile)
    get_spot()
}

class Tile {
    set_tile

    letter = string
    score = int

    order()
}
' Game --> Player: players
Game::create_player --> Player
Game::board --> Board
Game::tile_bag --> TileBag
Board::set_spots --> Spot
TileBag::create_tile --> Tile
@enduml